Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make"
+    "X, y = None"
    ]
   },
   {
