--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make"
+    "X, y = make_blobs(n_samples=400, )"
    ]
   },
   {
