--- a/index.ipynb
+++ b/index.ipynb
@@ -108,9 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means = None\n",
+    "k_means = KMeans(n_clusters=7)\n",
     "# dont forget to fit the model!\n",
-    "\n",
+    "k_means.fit()\n",
     "y_hat = k_means.predict(X)"
    ]
   },
