--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from None import None\n",
+    "from sklearn.metrics import silhouette_score\n",
     "labels = None\n",
     "\n",
     "# Call silhouette_score() below!\n"
