--- a/index.ipynb
+++ b/index.ipynb
@@ -221,9 +221,10 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import silhouette_score\n",
-    "labels = None\n",
+    "labels = k_means.labels_\n",
     "\n",
-    "# Call silhouette_score() below!\n"
+    "# Call silhouette_score() below!\n",
+    "silhouette_score(X, labels)"
    ]
   },
   {
