Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,15 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5628473532993684"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import silhouette_score\n",
     "labels = k_means.labels_\n",
     "\n",
     "# Call silhouette_score() below!\n",
-    "silhouette_score(X, labels)"
+    "silhouette_score(X, labels, metric='euclidean')"
    ]
   },
   {
@@ -247,9 +258,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means_6 = None\n",
+    "k_means_6 = KMeans(n_clusters=6)\n",
     "# Don't forget to fit this model, too!\n",
-    "\n",
+    "k_means_6\n",
     "yhat_6 = None\n",
     "\n",
     "# Import and modify the visualization code below this line!"
