Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,8 +260,8 @@
    "source": [
     "k_means_6 = KMeans(n_clusters=6)\n",
     "# Don't forget to fit this model, too!\n",
-    "k_means_6\n",
-    "yhat_6 = None\n",
+    "k_means_6.fit(X)\n",
+    "yhat_6 = k_means_6.pred(X)\n",
     "\n",
     "# Import and modify the visualization code below this line!"
    ]
