Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,16 +254,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'KMeans' object has no attribute 'pred'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a1141a22dd2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Don't forget to fit this model, too!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mk_means_6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0myhat_6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk_means_6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Import and modify the visualization code below this line!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'KMeans' object has no attribute 'pred'"
+     ]
+    }
+   ],
    "source": [
     "k_means_6 = KMeans(n_clusters=6)\n",
     "# Don't forget to fit this model, too!\n",
     "k_means_6.fit(X)\n",
     "yhat_6 = k_means_6.pred(X)\n",
     "\n",
-    "# Import and modify the visualization code below this line!"
+    "# Import and modify the visualization code below this line!\n",
+    "plt.scatter(X[:, 0], X[:, 1], c = y_hat, s = 25)\n",
+    "cl_centers_6 = k_means_6.cluster_centers_\n",
+    "plt.scatter(cl_centers_6[:, 0], cl_centers_6[:, 1], c='black', s=100);"
    ]
   },
   {
