--- a/index.ipynb
+++ b/index.ipynb
@@ -291,12 +291,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5513501487467306"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "labels_6 = k_means_6.labels_\n",
-    "silhouette_score(X, labels, metric='euclidean')\n",
+    "silhouette_score(X, labels_6, metric='euclidean')\n",
     "# Generate a silhouette score for this model below this line!"
    ]
   },
@@ -347,7 +358,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import calinski_harabaz_score\n",
+    "c"
+   ]
   },
   {
    "cell_type": "markdown",
